--- a/app/views/web/modules.html.erb
+++ b/app/views/web/modules.html.erb
@@ -4,8 +4,8 @@
 			Module 
 		</title>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.19/angular.js"></script>
+		<script src="/assets/angular.min.js"></script>
+		<script src="/assets/angular.js"></script>
 		<script src='/assets/modules.js'></script>
 		<link rel="stylesheet" href="/assets/web.css.scss">	
 
