--- a/app/views/web/modules.html.erb
+++ b/app/views/web/modules.html.erb
@@ -3,7 +3,8 @@
 		<title> 
 			Module 
 		</title>
-
+		<%= javascript_include_tag "application" %>
+		<%= stylesheet_link_tag "application" %>
 		<script src="/assets/angular.min.js"></script>
 		<script src="/assets/angular.js"></script>
 		<script src='/assets/modules.js'></script>
